<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    tools:context=".GameActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <ImageButton
            android:id="@+id/btPause"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:contentDescription="@string/gameBtPauseDesc"
            app:srcCompat="@android:drawable/ic_media_pause" />

        <TextView
            android:id="@+id/gameTextScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/gameTextScore"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/healContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">



        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <com.daniel.kidsapp.Game.GameView
            android:id="@+id/gameSurface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout_editor_absoluteY="48dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:gravity="fill_horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btNum1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt1"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt2"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt3"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt4"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt5"
            app:cornerRadius="10sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:weightSum="5">

        <Button
            android:id="@+id/btNum6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt6"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt7"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt8"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt9"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btNum0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/gameBt0"
            app:cornerRadius="10sp" />
    </TableRow>

</TableLayout>