<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textGameOverInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/gameOverText"
        android:textAlignment="center"
        android:textColor="?android:attr/textColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textGameOverScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gameOverScore"
        android:textAlignment="textStart"
        android:textColor="?android:attr/textColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textGameOverTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gameOverTime"
        android:textAlignment="textStart"
        android:textColor="?android:attr/textColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btGameOverExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/gameOverBtExit" />
</LinearLayout>